kubernetes_manifests/yaml/ingress-wp.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-wordpress
spec:
  rules:
  - host: wordpress.local
    http:
      paths:
      - backend:
          serviceName: nginx-wordpress
          servicePort: 80
